--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,22 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Check out the code
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
-    # Step 2: Set up Java environment
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '17' 
+        java-version: '17'
+        distribution: 'temurin'
 
-    # Step 3: Build the JAR file
     - name: Build with Maven
       run: |
         ./mvnw clean package -DskipTests
 
-    # Step 4: Save the JAR file as an artifact (optional)
     - name: Upload JAR file
       uses: actions/upload-artifact@v4
       with:
