--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set execute permissions for Maven Wrapper
+        run: chmod +x ./video-downloader-backend/mvnw
+
       # Step 2: Set up JDK (for backend build)
       - name: Set up JDK
         uses: actions/setup-java@v3
