--- a/video-downloader-backend/pom.xml
+++ b/video-downloader-backend/pom.xml
@@ -56,6 +56,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <version>3.3.3</version>
+        <configuration>
+          <mainClass>ch.marc.Application</mainClass>
+        </configuration>
       </plugin>
     </plugins>
   </build>
