Edited execution goals so META-INF folders are written inside of the jar

--- a/video-downloader-backend/pom.xml
+++ b/video-downloader-backend/pom.xml
@@ -59,6 +59,13 @@
         <configuration>
           <mainClass>ch.marc.Application</mainClass>
         </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
