feat: Update deploy.yml to include branch 6-service-downloading-videos-from-instagram

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build, Deploy, and Run on EC2
 on:
   push:
     branches:
-      - master
+      - 6-service-downloading-videos-from-instagram
 
 jobs:
   build-deploy:
