setup for local dev / ec2 environment

--- a/video-downloader-backend/src/main/resources/application.yaml
+++ b/video-downloader-backend/src/main/resources/application.yaml
@@ -9,3 +9,8 @@ camunda:
     generic-properties:
       properties:
         historyTimeToLive: 5
+
+
+video:
+  downloader:
+    script-path: C:/Code/video-downloader/video-downloader-backend/src/main/resources/scripts/video_downloader.py
