--- a/video-downloader-backend/Dockerfile
+++ b/video-downloader-backend/Dockerfile
@@ -4,8 +4,7 @@ FROM openjdk:17-jdk-slim
 # Install Python and necessary dependencies
 RUN apt-get update && \
     apt-get install -y python3 python3-pip && \
-    pip3 install instaloader && \
-    pip3 install boto3 && \
+    pip3 install instaloader boto3 && \
     rm -rf /var/lib/apt/lists/*
 
 # Set working directory
@@ -16,6 +15,9 @@ COPY target/*.jar app.jar
 
 # Copy the Python script into the container
 COPY src/main/resources/scripts/video_downloader.py /app/scripts/
+
+# Set environment variable for the script path
+ENV VIDEO_DOWNLOADER_SCRIPT_PATH="/app/scripts/video_downloader.py"
 
 # Expose the backend port
 EXPOSE 8080
