feat: Enhance download link retrieval by using historic variable instance and update history level in configuration

--- a/video-downloader-backend/src/main/resources/application.yaml
+++ b/video-downloader-backend/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ camunda.bpm.admin-user:
 
 camunda:
   bpm:
+    history-level: full
     generic-properties:
       properties:
         historyTimeToLive: 5
