chore: Update logging levels in application configuration for improved clarity

--- a/video-downloader-backend/src/main/resources/application.yaml
+++ b/video-downloader-backend/src/main/resources/application.yaml
@@ -18,6 +18,8 @@ video:
 
 logging:
   level:
-    root: DEBUG
+    root: INFO
     org.camunda.bpm: DEBUG
+    org.camunda.bpm.engine.persistence: TRACE
+
 
