--- a/video-downloader-backend/pom.xml
+++ b/video-downloader-backend/pom.xml
@@ -42,6 +42,15 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-jdbc</artifactId>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/transcribe -->
+    <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>transcribe</artifactId>
+        <version>2.29.9</version>
+    </dependency>
+
+
+
   </dependencies>
 
   <build>
