--- a/video-downloader-backend/pom.xml
+++ b/video-downloader-backend/pom.xml
@@ -12,6 +12,10 @@
   </parent>
 
   <artifactId>video-downloader-backend</artifactId>
+  
+  <properties>
+    <aws.sdk.version>2.29.9</aws.sdk.version>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -42,15 +46,16 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-jdbc</artifactId>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/transcribe -->
     <dependency>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>transcribe</artifactId>
-        <version>2.29.9</version>
+        <version>${aws.sdk.version}</version>
     </dependency>
-
-
-
+    <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>translate</artifactId>
+        <version>${aws.sdk.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
