implemented translatevideodelegate. Which calls the .srt values and stores them as a global varialbe.

--- a/video-downloader-backend/pom.xml
+++ b/video-downloader-backend/pom.xml
@@ -56,6 +56,11 @@
         <artifactId>translate</artifactId>
         <version>${aws.sdk.version}</version>
     </dependency>
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>s3</artifactId>
+      <version>${aws.sdk.version}</version>
+  </dependency>
   </dependencies>
 
   <build>
