--- a/video-downloader-backend/pom.xml
+++ b/video-downloader-backend/pom.xml
@@ -60,7 +60,13 @@
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>s3</artifactId>
       <version>${aws.sdk.version}</version>
-  </dependency>
+    </dependency>
+    <dependency>
+        <groupId>com.ibm.icu</groupId>
+        <artifactId>icu4j</artifactId>
+        <version>76.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
