--- a/video-downloader-backend/Dockerfile
+++ b/video-downloader-backend/Dockerfile
@@ -17,7 +17,12 @@ COPY target/*.jar app.jar
 # Copy the Python script into the container
 COPY src/main/resources/scripts/video_downloader.py /app/scripts/
 
-# Set environment variable for the script path
+# Decode the session file from the INSTA_SESSION environment variable
+ARG INSTA_SESSION
+RUN echo $INSTA_SESSION | base64 -d > /app/session-mxrcweber
+
+# Set environment variable for Instaloader to use the session file
+ENV INSTALOADER_SESSIONFILE="/app/session-mxrcweber"
 ENV VIDEO_DOWNLOADER_SCRIPT_PATH="/app/scripts/video_downloader.py"
 
 # Expose the backend port
