Update Dockerfile to set permissions on temp directory and modify FFmpeg command to use absolute paths

--- a/video-downloader-backend/Dockerfile
+++ b/video-downloader-backend/Dockerfile
@@ -11,8 +11,8 @@ RUN apt-get update && \
 # Set working directory
 WORKDIR /app
 
-# Create a temporary directory for file operations
-RUN mkdir /app/temp
+# Set permissions on the temp directory and its contents
+RUN mkdir -p /tmp && chmod 777 /tmp
 
 # Copy the built JAR file into the container
 COPY target/*.jar app.jar
