fix max length of variables inside of camunda. Implemented handling for multiple link types

--- a/video-downloader-backend/pom.xml
+++ b/video-downloader-backend/pom.xml
@@ -66,6 +66,13 @@
         <artifactId>icu4j</artifactId>
         <version>76.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.34</version>
+        <scope>provided</scope>
+    </dependency>
 
   </dependencies>
 
