--- a/video-downloader-backend/Dockerfile
+++ b/video-downloader-backend/Dockerfile
@@ -3,11 +3,10 @@ FROM openjdk:17-jdk-slim
 
 # Install Python and necessary dependencies
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip && \
-    pip3 install instaloader boto3 && \
-    pip3 install pytube boto3 && \
-    apt-get install -y ffmpeg && \
+    apt-get install -y --no-install-recommends python3 python3-pip ffmpeg && \
+    pip3 install --no-cache-dir instaloader boto3 pytube yt_dlp uuid && \
     rm -rf /var/lib/apt/lists/*
+
 
 # Set working directory
 WORKDIR /app
